--- a/LibraryManagementSystem/Views/Librarian/BookDetails.cshtml
+++ b/LibraryManagementSystem/Views/Librarian/BookDetails.cshtml
@@ -72,10 +72,10 @@
                     <dd class="col-sm-8">@Model.Publisher</dd>
 
                     <dt class="col-sm-4">Total Copies:</dt>
-                    <dd class="col-sm-8">@Model.TotalCopies</dd>
-
-                    <dt class="col-sm-4">Available Copies:</dt>
-                    <dd class="col-sm-8">@Model.AvailableCopies</dd>
+                    <dd class="col-sm-8">@Model.TotalCopies</dd>   
+                    
+                    <dt class="col-sm-4">Total Sell Book:</dt>
+                    <dd class="col-sm-8">@Model.SellBook</dd>
 
                     <dt class="col-sm-4">Created By:</dt>
                     <dd class="col-sm-8">@Model.CreatedBy</dd>
