--- a/LibraryManagementSystem/Views/Reader/BookDetails.cshtml
+++ b/LibraryManagementSystem/Views/Reader/BookDetails.cshtml
@@ -60,8 +60,11 @@
                     <dt class="col-sm-4">Published Date:</dt>
                     <dd class="col-sm-8">@Model.PublishedDate.ToString("yyyy-MM-dd")</dd>
 
-                    <dt class="col-sm-4">Total Copies:</dt>
-                    <dd class="col-sm-8">@Model.TotalCopies</dd>
+                    <dt class="col-sm-4">Available Copies(For Issue):</dt>
+                    <dd class="col-sm-8">@Model.AvailableCopies</dd>
+
+                    <dt class="col-sm-4">Available Books(For Purchase):</dt>
+                    <dd class="col-sm-8">@Model.SellBook</dd>
                 </dl>
 
                 <div class="mt-4 d-flex gap-2">
